@@ -1,3 +1,9 @@
+2013-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-form.el (w3m-form-get-by-name): Distinguish the type of forms of
+	the same names.
+	(w3m-form-resume, w3m-form-parse-and-fontify, w3m-form-input-map): Do.
+
 2013-04-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-filter.el (w3m-filter-fix-tfoot-rendering): New filter.
